--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "nodemon app.js",
     "dev": "nodemon app.js",
     "build": "npm i"
-
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -21,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.4.4"
   },
   "devDependencies": {
     "prisma": "^5.9.0"
