--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "app.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/auth", "dest": "/app.js" },
-      { "src": "/field", "dest": "/app.js" },
-      { "src": "/booking", "dest": "/app.js" },
-      { "src": "/(.*)", "dest": "/app.js" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "app.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/auth/(.*)", "dest": "/app.js" },
+    { "src": "/field/(.*)", "dest": "/app.js" },
+    { "src": "/booking/(.*)", "dest": "/app.js" },
+    { "src": "/(.*)", "dest": "/app.js" }
+  ]
+}
