--- a/package.json
+++ b/package.json
@@ -19,18 +19,23 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.1",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "resend": "^4.1.2",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   },
