--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -40,6 +40,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "prisma": "^5.9.0"
+    "nodemon": "^3.1.9",
+    "prisma": "^5.22.0"
   }
 }
